test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: test-app
spec:
 replicas: 2
 selector:
   matchLabels:
       app: test-app
 template:
   metadata:
     labels:
       app: test-app
   spec:
     containers:
     - name: test-app
       image: test/test-image:latest
       resources:
           requests:
              memory: "128Mi"
              cpu: "200m"
           limits:
              memory: "256Mi"
              cpu: "300m"
       ports:
       - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
 name: test-app
spec:
 selector:
   app: test-app
 ports:
   - protocol: TCP
     port: 80
